# riscv-nesOS

./: .gitignore  Cargo.toml  Makefile  Makefile copy  README.md  hello  hello.s  todo  virt.dtc
bootloader/: kmain.cpp  linker.ld  startup.s
example/: Mode13  vga.rs
hello_cpp/: Makefile  main.cpp  print_char.s  riscv64-virt copy.ld  riscv64-virt.ld
hello_world/: hello_world.s  linker.ld
rust/: Cargo.toml  Makefile
rust/src/: lib.rs
rust/src/asm/: boot.S
src/: dev.rs  emu.rs  lib.rs  mod.rs  util.rs
src/asm/: startup.S  trap.S
src/dev/: pci.rs  uart.rs  vga.rs
src/dev/vga/: registers.rs
src/emu/nes/: cpu.rs
src/lds/: linker.lds
src/srv/: console.rs
src/util/: alloc.rs  interrupt.rs  std.rs  thread.rs
