[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build]
target = "riscv64gc-unknown-none-elf"

opt-level = 0
[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 0

[dependencies]
embedded-graphics = "0.8.1"
bitfield-struct = "0.7"